--- a/Week1/app/src/main/res/layout/activity_main.xml
+++ b/Week1/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
     <EditText
         android:id="@+id/textUsername"
         android:layout_width="match_parent"
-        android:layout_height="97dp"
+        android:layout_height="52dp"
         android:ems="10"
         android:hint="Username"
         android:inputType="text"
@@ -43,9 +43,15 @@
     <EditText
         android:id="@+id/textPassword"
         android:layout_width="match_parent"
-        android:layout_height="97dp"
+        android:layout_height="50dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
         android:textAlignment="center" />
+
+    <Button
+        android:id="@+id/buttonLogin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Login" />
 </LinearLayout>
