--- a/Week8/app/src/main/res/layout/activity_main.xml
+++ b/Week8/app/src/main/res/layout/activity_main.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/main">
     <EditText
         android:id="@+id/txtURL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:text="https://upload.wikimedia.org/wikipedia/commons/e/ed/016vallesmarineris_reduced0.5.jpg" />
+        android:text="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/016vallesmarineris.jpg/1280px-016vallesmarineris.jpg" />
     <Button
         android:id="@+id/btnDownload"
         android:layout_width="match_parent"
