--- a/Week10/app/src/main/res/layout/fragment_edit_note.xml
+++ b/Week10/app/src/main/res/layout/fragment_edit_note.xml
@@ -10,5 +10,7 @@
         android:layout_height="match_parent"
         android:inputType="textMultiLine"
         android:gravity="top"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:hint="Note..." />
 </FrameLayout>
